fixed spacing/styling

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 3% 10%;
     background-color: hsl(36, 100%, 99%);
     font-family: 'Inter', sans-serif;
     
@@ -16,7 +16,7 @@ header {
     list-style: none;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 25px;    
+    padding-bottom: 25px;
 }
 
 #navbar {
@@ -66,7 +66,7 @@ header {
 }
 
 #featured h1 {
-    font-size: 60px;
+    font-size: 4em;
     font-weight: 800;
     float: left;
     width: 40%;
@@ -74,6 +74,8 @@ header {
 }
 
 #featured p {
+    float: right;
+    width: 50%;
     font-size: 24px;
     line-height: 35px;
     margin: 30px 0 0 0;
@@ -87,8 +89,9 @@ header {
     font-size: 16px;
     letter-spacing: 7px;
     font-weight: 700;
-    width: 25%;
-    height: 45px;
+    width: 20%;
+    height: 60px;
+    left: 50%;
     bottom: 0;
     cursor:pointer;
     transition: 300ms ease-in-out;
@@ -104,7 +107,7 @@ header {
     flex-direction: column;
     background-color:hsl(240, 100%, 5%);
     width: 25%;
-    padding: 30px 20px 20px 20px;
+    padding: 35px 20px 20px 20px;
 }
 
 #new h2 {
@@ -129,6 +132,7 @@ header {
 #new p {
     font-size: 18px;
     margin: 0;
+    line-height: 30px;
 }
 
 hr {
@@ -147,7 +151,7 @@ hr {
 /* GRID OF ARTICLES */
 
 #old {
-    margin: 50px;
+    margin: 50px 0;
     display: grid;
     grid-template-columns: 35% 35% 35%;
 }
@@ -191,9 +195,6 @@ hr {
     line-height: 25px;
     margin: 0;
 }
-
-
-
 
 
 /* //////////////////// */
